--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,3 +32,11 @@ select,
 textarea {
   @apply rounded border p-2 outline-none ring-indigo-300 focus:ring;
 }
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
+}
+
+.register {
+  @apply text-blue-600 hover:text-blue-800;
+}
