--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,7 @@ textarea {
 .register {
   @apply text-blue-600 hover:text-blue-800;
 }
+
+.default-button {
+  @apply rounded bg-gray-100 py-2  px-4 text-black shadow outline-none hover:bg-gray-200  active:bg-gray-300;
+}
